<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/normal_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingLeft="3dp"
    android:paddingTop="15dp"
    android:paddingRight="3dp"
    android:paddingBottom="15dp">

    <View
        android:id="@+id/km_transferred_to_left_bg"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_weight="1"
        android:background="@color/black" />

    <TextView
        android:id="@+id/km_transferred_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/km_transferred_to_message"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/km_transferred_to"
        android:layout_width="wrap_content"
        android:maxWidth="150dp"
        android:maxLines="1"
        android:gravity="center"
        android:ellipsize="end"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <View
        android:id="@+id/km_transferred_to_right_bg"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_weight="1"
        android:background="@color/black" />
</LinearLayout>