...
        android:minHeight="@dimen/material_touchable_minheight"
        app:cardCornerRadius="20dp"
        app:cardElevation="0.5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/widget_record"
        app:layout_constraintEnd_toStartOf="@+id/conversation_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
                    android:id="@+id/main_edit_text_constraint_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/material_touchable_minheight">

                    <EditText
                        android:id="@+id/conversation_message"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/apploizc_transparent_color"
                        android:cursorVisible="true"
                        android:hint="Escribe tu mensaje..."
...
