...
        android:layout_toEndOf="@+id/profile_image_layout"
        android:layout_toRightOf="@+id/profile_image_layout"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:maxLines="1"
...
